    keyword, which can appear corresponding to a
    table in a SELECT, UPDATE, or DELETE statement.
    The phrase is established using with_hint().
    Courtesy Ryan Kelly [ticket:2506]

- firebird
  - [feature] The "startswith()" operator renders
    as "STARTING WITH", "~startswith()" renders
    as "NOT STARTING WITH", using FB's more efficient
    operator.  [ticket:2470]

- mysql
  - [bug] Dialect no longer emits expensive server
    collations query, as well as server casing,
    on first connect.  These functions are still
    available as semi-private. [ticket:2404]

- oracle
  - [bug] Quoting information is now passed along
    from a Column with quote=True when generating
    a same-named bound parameter to the bindparam()
    object, as is the case in generated INSERT and UPDATE
    statements, so that unknown reserved names can
    be fully supported.  [ticket:2437]

  - [feature] The types of columns excluded from the
    setinputsizes() set can be customized by sending
    a list of string DBAPI type names to exclude.
    This list was previously fixed.  The list also
    now defaults to STRING, UNICODE, removing
    CLOB, NCLOB from the list.  [ticket:2469]

- extensions
  - [removed] The SQLSoup extension is removed from
    SQLAlchemy, and is now an external project.
    See http://pypi.python.org/pypi/sqlsoup .
    [ticket:2262]

0.7.7 - 0.7.xx
==============
0.8 development begins during 0.7.7 development.
All relevant bug fixes
and features listed below from version 0.7.7 on
are also present in 0.8.

0.7.9
=====
- orm
  - [bug] Fixed bug mostly local to new
    AbstractConcreteBase helper where the "type"
    attribute from the superclass would not
    be overridden on the subclass to produce the
    "reserved for base" error message, instead placing
    a do-nothing attribute there.  This was inconsistent
    vs. using ConcreteBase as well as all the behavior
    of classical concrete mappings, where the "type"